# gis-example

./: .gitignore  .npmrc  .spectral.yaml  AGENTS.md  README.md  package-lock.json  package.json
.ci/: nightly-request
.github/: dependabot.yml
.github/workflows/: nightly.yml  verify.yml
apps/api/: Dockerfile  build.gradle.kts  openapi.yaml  settings.gradle.kts
apps/web/: Dockerfile  index.html  nginx.conf  package.json  silent-renew.html  vite.config.ts  vitest.config.ts
apps/web/src/: App.test.tsx  App.tsx  AuthGate.test.tsx  AuthGate.tsx  api.test.ts  api.ts  appShell.tsx  appState.tsx  appTypes.ts  auth.ts  constants.ts  main.tsx  mapState.tsx  mapUtils.ts  notifications.ts  routeMeta.ts  router.tsx  silentRenew.ts  styles.css  types.ts  utils.test.ts  utils.ts
apps/web/src/components/: AdminWorkspace.tsx  BuildingWorkspace.tsx  BusinessFilterPanel.tsx  BusinessLinksPanel.tsx  ChoiceSelect.tsx  ConditionEditor.tsx  FeatureEditor.tsx  LandWorkspace.tsx  MapPane.tsx  MapPaneHost.tsx  MapSupportPane.tsx  ObjectActions.tsx  PartyForm.tsx  (+10 more)
apps/worker-gis/: Dockerfile  pyproject.toml  requirements-runtime.txt  requirements.txt
apps/worker-gis/src/: worker.py
apps/worker-gis/tests/: test_pure_functions.py
apps/worker-gis/tests/integration/: conftest.py  test_import_roundtrip.py  test_malicious_inputs.py  test_sqs_queue.py
docs/: authorization.md  backup-restore.md  db-migrations.md  dependency-policy.md  environment-variables.md  jobs-architecture.md  observability.md  reverse-proxy.md  ui-guidelines.md  web-oidc-token-management.md  worker-isolation.md
infra/: .env.example  docker-compose.yml
infra/elasticmq/: elasticmq.conf
infra/keycloak/: realm-gis.json
infra/martin/: martin.yaml
infra/postgres/: 050-seed-business-data.sql  060-seed-dense-tokyo-business-demo.sql  070-seed-dev-users.sql  init.sql  seed-dev-data.sh
samples/geojson/: buildings.geojson  parcels.geojson
scripts/: check-contract-drift.sh  check-dev-seed-isolation.sh  fuzz-api.sh  smoke-e2e.sh  verify.sh
tools/open-data/: README.md  fetch_tokyo_core_open_data.py  tokyo-core-sources.json
(+108 files in other folders)
