[project]
name = "worker-gis"
version = "0.1.0"
description = "GIS import worker (GDAL/OGR ingestion into PostGIS)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S608", # SQL injection via string concatenation (quote_ident 経由以外の埋め込みを検知)
]
[tool.ruff.lint.per-file-ignores]
# worker は quote_ident / qtable で識別子をクォートした上で f-string SQL を組む設計のため、
# S608 はテストで担保しつつ src では許容する
"src/worker.py" = ["S608"]
# 統合テストは自分で作ったテーブル名を qtable でクォートして検証する
"tests/integration/*" = ["S608"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

# boto3 は型スタブを同梱しない。S3 クライアントは s3_client() の戻り値 (Any) に閉じ込め、
# それ以外のコードの strict 検査は維持する
[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: PostGIS + GDAL を要する統合テスト (CI の integration ジョブで実行)",
]
# 既定では単体テストのみ。統合テストは `pytest -m integration` で明示的に実行する
addopts = "-m 'not integration'"
